--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^2.0.3",
     "@types/ramda": "^0.27.34",
     "axios": "^0.21.0",
     "discord.js": "^12.5.1",
     "fp-ts": "^2.9.1",
+    "node-cron": "^2.0.3",
     "ramda": "^0.27.1",
     "runtypes": "^5.0.1",
     "rxjs": "^6.6.3",
