--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/ramda": "^0.27.34",
     "axios": "^0.21.0",
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fp-ts": "^2.9.1",
     "node-cron": "^2.0.3",
