--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,11 @@
 steps:
 - name: "gcr.io/cloud-builders/docker"
+  env:
+    - 'COMMAND_PREFIX=${_COMMAND_PREFIX}'
+    - 'DISCORD_TOKEN=${_DISCORD_TOKEN}'
+    - 'DATA_QUOTES=${_DATA_QUOTES}'
+    - 'DATA_QUOTES=${_DATA_QUOTES}'
+    - 'DATA_CRONTAB=${_DATA_CRONTAB}'
   args: ["build", "-t", "gcr.io/dotintegral/botintegral:$SHORT_SHA", "."]
 
 - name: "gcr.io/cloud-builders/docker"
