--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     - 'BOT_COMMAND_PREFIX=${_COMMAND_PREFIX}'
     - 'BOT_DISCORD_TOKEN=${_DISCORD_TOKEN}'
     - 'BOT_DATA_QUOTES=${_DATA_QUOTES}'
-    - 'BOT_DATA_QUOTES=${_DATA_QUOTES}'
+    - 'BOT_DATA_REACTIONS=${_DATA_REACTIONS}'
     - 'BOT_DATA_CRONTAB=${_DATA_CRONTAB}'
 
 - name: "gcr.io/cloud-builders/docker"
