--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,10 +15,10 @@ steps:
 - name: "gcr.io/cloud-builders/docker"
   args: ["push", "gcr.io/dotintegral/botintegral:$SHORT_SHA"]
 
-# - name: "gcr.io/cloud-builders/gke-deploy"
-#   args:
-#   - run
-#   - --filename=kubernetes-resource-file
-#   - --image=gcr.io/dotintegral/botintegral:$SHORT_SHA
-#   - --location=location
-#   - --cluster=cluster
+- name: "gcr.io/cloud-builders/gke-deploy"
+  args:
+  - run
+  - --filename=kubeconfig.yaml
+  - --image=gcr.io/dotintegral/botintegral:$SHORT_SHA
+  - --location=europe-west3-a
+  - --cluster=botintegral
